--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -12,12 +12,12 @@ body {
   height: 20px;
   display: block;
 }
-.c-row{
+.c-row {
   @extend %df;
-  &.is-aic{
+  &.is-aic {
     @extend %aic;
   }
-  .c-img-preview{
+  .c-img-preview {
     width: 40px;
     height: 40px;
     margin-right: j(16);
@@ -69,7 +69,6 @@ body {
   width: 300px;
 }
 
-
 .c-header-section {
   @extend %df;
   @extend %aic;
@@ -80,9 +79,11 @@ body {
   padding: 0 24px;
   height: var(--ds-navbar-height);
   // background: linear-gradient(to right, #769aee, #769aee);
-  box-shadow:
-    0 4px 12px 0 rgba(0, 0, 0, 0.03),
-    0 7px 25px 0 rgba(0, 0, 0, 0.03),
-    0 0 0 1px rgba(0, 0, 0, 0.05);
-  background-color: #fff;
+  background-color: #485c6f;
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
+  // box-shadow:
+  //   0 4px 12px 0 rgba(0, 0, 0, 0.03),
+  //   0 7px 25px 0 rgba(0, 0, 0, 0.03),
+  //   0 0 0 1px rgba(0, 0, 0, 0.05);
+  // background-color: #fff;
 }
