--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -79,7 +79,8 @@ body {
   padding: 0 24px;
   height: var(--ds-navbar-height);
   // background: linear-gradient(to right, #769aee, #769aee);
-  background-color: #485c6f;
+ 
+  background-color: #364a5a;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
   // box-shadow:
   //   0 4px 12px 0 rgba(0, 0, 0, 0.03),
