--- a/src/assets/scss/element.scss
+++ b/src/assets/scss/element.scss
@@ -38,3 +38,19 @@
   }
 }
 
+// 恢复 el-link 和 el-tag 组件的默认颜色
+
+.el-link, .el-tag {
+  --el-color-primary:#409eff;
+
+  --el-color-primary-light-1: #53a8ff;
+  --el-color-primary-light-2: #66b1ff;
+  --el-color-primary-light-3: #79bbff;
+  --el-color-primary-light-4: #8cc5ff;
+  --el-color-primary-light-5: #a0cfff;
+  --el-color-primary-light-6: #b3d8ff;
+  --el-color-primary-light-7: #c6e2ff;
+  --el-color-primary-light-8: #d9ecff;
+  --el-color-primary-light-9: #ecf5ff;
+}
+
