--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -6,7 +6,14 @@ body {
 .c-flex {
   @extend %df;
 }
-
+.c-flex-center {
+  display: flex; 
+  align-items: center; 
+  gap: 4px
+}
+.c-pointer{
+  cursor: pointer;
+}
 .c-img-preview {
   width: 20px;
   height: 20px;
@@ -121,3 +128,16 @@ body {
       }
     }
   }
+
+.layout-user-box{
+  &.layout-user-box-white {
+    color: #fff !important;
+    .el-dropdown{
+      color: #fff !important;
+    }
+    .user-name{
+      color: #fff !important;
+    }
+  }
+}
+  
