--- a/src/components/ProDrawer/style/index.scss
+++ b/src/components/ProDrawer/style/index.scss
@@ -1,8 +1,11 @@
-.pro-drawer{
-  .el-drawer__header{
+.pro-drawer {
+  .el-drawer__header {
     margin-bottom: 0;
     padding-bottom: 16px;
     border-bottom: 1px var(--el-border-color) var(--el-border-style);
   }
-  
+  .el-date-editor.el-input,
+  .el-date-editor.el-input__wrapper {
+    width: 100%;
+  }
 }
